Bug 129446 - Ark crashes with Signal 11 (SIGSEGV)
Summary: Ark crashes with Signal 11 (SIGSEGV)
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Slackware Linux
: NOR crash
Target Milestone: ---
Assignee: Harald Hvaal
URL:
Keywords:
: 139940 140486 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-06-19 20:23 UTC by Thanos Kyritsis
Modified: 2007-04-20 22:28 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example zip file upon which Ark crashes (50.32 KB, application/zip)
2006-06-19 20:24 UTC, Thanos Kyritsis
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thanos Kyritsis 2006-06-19 20:23:09 UTC
Version:           2.6.3 (using KDE KDE 3.5.3)
Installed from:    Slackware Packages
OS:                Linux

Ark crashes when trying to open Zip files made with PclZip 2.5 (PhpConcept Library Zip, http://www.phpconcept.net/pclzip/index.en.php).

I'll attach such a zip file in my next post.

The funny thing is that opening the zip file with Konqueror (and doing Select All, Copy, Paste) works. Gnome's Archive Manager also works. Various MS Windows Applications also work (WinRAR, WinZip, etc ...).
Command line tools also work (unzip). Midnight Commander, as well.

After Ark crashes, the familiar window pops up: "The Application Ark (ark) crashed and caused the signal 11 (SIGSEGV)". I'll paste the backtrace:

(no debugging symbols found)
Using host libthread_db library "/lib/tls/libthread_db.so.1".
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
[Thread debugging using libthread_db enabled]
[New Thread -1240873248 (LWP 29392)]
[KCrash handler]
#5  0xb70c7e72 in QFontMetrics::width () from /usr/lib/qt/lib/libqt-mt.so.3
#6  0xb71f80d8 in QListViewItem::width () from /usr/lib/qt/lib/libqt-mt.so.3
#7  0xb71fa100 in QListView::widthChanged ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#8  0xb71fa28b in QListViewItem::widthChanged ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#9  0xb71fb0e0 in QListViewItem::setup () from /usr/lib/qt/lib/libqt-mt.so.3
#10 0xb71fa517 in QListViewItem::setPixmap ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#11 0xb5e9321d in FileListView::findParent ()
   from /opt/kde/lib/kde3/libarkpart.so
#12 0xb5e93505 in FileListView::addItem ()
   from /opt/kde/lib/kde3/libarkpart.so
#13 0xb5e9773b in Arch::processLine () from /opt/kde/lib/kde3/libarkpart.so
#14 0xb5e96034 in Arch::slotReceivedTOC ()
   from /opt/kde/lib/kde3/libarkpart.so
#15 0xb5e96ff8 in Arch::qt_invoke () from /opt/kde/lib/kde3/libarkpart.so
#16 0xb5e89f9b in ZipArch::qt_invoke () from /opt/kde/lib/kde3/libarkpart.so
#17 0xb7111d34 in QObject::activate_signal ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#18 0xb7772c7b in KProcess::receivedStdout ()
   from /opt/kde/lib/libkdecore.so.4
#19 0xb7772d62 in KProcess::childOutput () from /opt/kde/lib/libkdecore.so.4
#20 0xb7772da9 in KProcess::slotChildOutput ()
   from /opt/kde/lib/libkdecore.so.4
#21 0xb7773097 in KProcess::qt_invoke () from /opt/kde/lib/libkdecore.so.4
#22 0xb7111d34 in QObject::activate_signal ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#23 0xb711235b in QObject::activate_signal ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#24 0xb7452660 in QSocketNotifier::activated ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#25 0xb712eda0 in QSocketNotifier::event () from /usr/lib/qt/lib/libqt-mt.so.3
#26 0xb70ad22f in QApplication::internalNotify ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#27 0xb70ad3cc in QApplication::notify () from /usr/lib/qt/lib/libqt-mt.so.3
#28 0xb77269f5 in KApplication::notify () from /opt/kde/lib/libkdecore.so.4
#29 0xb70a08f3 in QEventLoop::activateSocketNotifiers ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#30 0xb7059481 in QEventLoop::processEvents ()
   from /usr/lib/qt/lib/libqt-mt.so.3
#31 0xb70c3951 in QEventLoop::enterLoop () from /usr/lib/qt/lib/libqt-mt.so.3
#32 0xb70c38a6 in QEventLoop::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#33 0xb70ac38f in QApplication::exec () from /usr/lib/qt/lib/libqt-mt.so.3
#34 0xb5f6fbad in kdemain () from /opt/kde/lib/libkdeinit_ark.so
#35 0xb762b7b4 in kdeinitmain () from /opt/kde/lib/kde3/ark.so
#36 0x0804e4b4 in ?? ()
#37 0x00000008 in ?? ()
#38 0x0812a060 in ?? ()
#39 0x00000001 in ?? ()
#40 0x00000000 in ?? ()
Comment 1 Thanos Kyritsis 2006-06-19 20:24:06 UTC
Created attachment 16705 [details]
Example zip file upon which Ark crashes
Comment 2 Haris Kouzinopoulos 2006-06-20 15:41:10 UTC
Efxaristoume :) 
A better backtrace follows:

#5  0xb70a6ced in QFontMetrics::width () from /usr/qt/3/lib/libqt-mt.so.3
#6  0xb71ce386 in QListViewItem::width () from /usr/qt/3/lib/libqt-mt.so.3
#7  0xb71d018c in QListView::widthChanged () from /usr/qt/3/lib/libqt-mt.so.3
#8  0xb71d02f3 in QListViewItem::widthChanged ()
   from /usr/qt/3/lib/libqt-mt.so.3
#9  0xb71d10c6 in QListViewItem::setup () from /usr/qt/3/lib/libqt-mt.so.3
#10 0xb71d055e in QListViewItem::setPixmap () from /usr/qt/3/lib/libqt-mt.so.3
#11 0xb67285d0 in folderLVI (parent=0x81b3d28, name=@0xbfcdb380)
    at filelistview.cpp:170
#12 0xb6729a60 in FileListView::findParent (this=0x8141c50, 
    fullname=@0x81b36e0) at filelistview.cpp:541
#13 0xb6729248 in FileListView::addItem (this=0x8141c50, entries=@0xbfcdb480)
    at filelistview.cpp:379
#14 0xb672ce23 in Arch::processLine (this=0x81a6f30, line=@0x81a6f60)
    at arch.cpp:359
#15 0xb672c81b in Arch::slotReceivedTOC (this=0x81a6f30, 
    data=0xbfcdb6e0 "Archive:  /root/Desktop/attachment.zip\n Length   Method    Size  Ratio   Date   Time   CRC-32    Name\n--------  ------  ------- -----   ----   ----   ------    ----\n       0  Stored        0   0%  06-"..., 
    length=1024) at arch.cpp:277
#16 0xb672d847 in Arch::qt_invoke (this=0x81a6f30, _id=8, _o=0xbfcdb650)
    at arch.moc:230
#17 0xb6721996 in ZipArch::qt_invoke (this=0x81a6f30, _id=8, _o=0xbfcdb650)
    at zip.moc:77
#18 0xb70eedae in QObject::activate_signal () from /usr/qt/3/lib/libqt-mt.so.3
#19 0xb772b710 in KProcess::receivedStdout ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#20 0xb772b7c8 in KProcess::childOutput ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#21 0xb772b7f8 in KProcess::slotChildOutput ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#22 0xb772ba42 in KProcess::commClose () from /usr/kde/3.5/lib/libkdecore.so.4
#23 0xb772b3df in KProcess::processHasExited ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#24 0xb772ebaf in KProcessController::slotDoHousekeeping ()
   from /usr/kde/3.5/lib/libkdecore.so.4
#25 0xb772ec0d in KProcessController::qt_invoke ()
   from /usr/kde/3.5/lib/libkdecore.so.4
Comment 3 Haris Kouzinopoulos 2006-06-20 16:34:22 UTC
Ark crashes initially on this:
static FileLVI* folderLVI( KListViewItem *parent, const QString& name )

and more specific in
folder->setPixmap( 0, KMimeType::mimeType( "inode/directory" )->pixmap( KIcon::Small ) );

After commenting the line out, Ark continues to crash but i couldn't locate the exact position. All these FileLVI functions are not documented at all
Comment 4 Martin Koller 2007-04-15 21:28:59 UTC
*** Bug 139940 has been marked as a duplicate of this bug. ***
Comment 5 Martin Koller 2007-04-15 21:30:24 UTC
SVN commit 654322 by mkoller:

BUG: 129446

Don't crash with files starting with "/"



 M  +4 -0      filelistview.cpp  


--- branches/KDE/3.5/kdeutils/ark/filelistview.cpp #654321:654322
@@ -127,6 +127,8 @@
 		QString name = text;
 		if ( name.endsWith( "/" ) )
 			name = name.left( name.length() - 1 );
+		if ( name.startsWith( "/" ) )
+			name = name.mid( 1 );
 		int pos = name.findRev( '/' );
 		if ( pos != -1 )
 			name = name.right( name.length() - pos - 1 );
@@ -504,6 +506,8 @@
 
 	if ( name.endsWith( "/" ) )
 		name = name.left( name.length() -1 );
+	if ( name.startsWith( "/" ) )
+		name = name.mid( 1 );
 	// Checks if this entry needs a parent
 	if ( !name.contains( '/' ) )
 		return static_cast< FileLVI* >( 0 );
Comment 6 Martin Koller 2007-04-20 22:28:44 UTC
*** Bug 140486 has been marked as a duplicate of this bug. ***