BUG: 129446

Don't crash with files starting with "/"


svn path=/branches/KDE/3.5/kdeutils/ark/; revision=654322